# quokka_postprocess_3D

./: .gitignore  README.md  REPRODUCE.md  check_convergence_sparse.py  check_eint_monotonicity.py  check_mu_gamma_monotonicity.py  compare_T_quokka_vs_despotic_slices.py  notes_pdf_normalisation.md  notes_sigmaV_derivation.md  paper_draft_3.3.5_3.3.6.md  pyproject.toml  requirements.txt
docs/: algorithm_audit_2026-05-29.md  cie_explained.md  colden_lateral_extension.md  despotic_validation_prop_sample.md  line_emission_calculations.md  mass_weighted_sigma_by_phase_audit.md  sigma_calculations_explained.md
notebook/: notes_HI_21cm_derivation.md  notes_despotic_table_physics.md
quokka2s/: README.md
quokka2s/docs/: algorithm_audit_2026-05-29.md  colden_lateral_extension.md  despotic_validation_prop_sample.md  line_emission_calculations.md
quokka2s/scripts/: analyze_table_failures.py  audit_dvdr_independence.py  build_log_samples_3d.py  check_colden_range.py  compare_NH_means.py  diagnose_NH_slice.py  diagnose_lext_floor.py  plot_GOW_v2_vs_v4_compare.py  plot_NH_directions_L0_L9.py  plot_T_despotic_0_vs_15_arith.py  plot_T_despotic_0_vs_15_max.py  plot_T_despotic_lext_compare.py  plot_T_despotic_lext_slices.py  plot_T_despotic_lext_slices_0_vs_99.py  plot_T_despotic_midx_lext.py  plot_failures_per_dvdr.py  (+15 more)
scripts/: analyze_table_failures.py  audit_dvdr_independence.py  build_log_samples_3d.py  fill_table_convex_hull_only.py  plot_failures_per_dvdr.py  plot_phase_colden_density_mass.py  plot_slice_table_inputs.py  plot_validation_migration.py  plot_validation_prop_only.py  replot_validation_shared_cbar.py  representative_cold_dense.py  run_dataset_series.sh  run_table_overlay_sweep.sh  validate_despotic_cold_dense.py
(+97 files in other folders)
